// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`activity/ActivityItem ActivityChannelPackageUpdated smoke-test 1`] = `
<li class="MuiListItem-root MuiListItem-padding MuiListItem-alignItemsFlexStart css-kd2s28-MuiListItem-root">
  <div class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row css-tqvfrr-MuiGrid-root">
    <div class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-10 css-r13beu-MuiGrid-root">
      <div class="MuiBox-root css-geek62">
        <div class="MuiBox-root css-12z0wuy">
          <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-kvy912-MuiSvgIcon-root"
               focusable="false"
               aria-hidden="true"
               viewbox="0 0 24 24"
               data-testid="ErrorOutlinedIcon"
          >
            <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 15h-2v-2h2zm0-4h-2V7h2z">
            </path>
          </svg>
        </div>
        <div class="MuiBox-root css-0">
          <p class="MuiTypography-root MuiTypography-body1 css-juydac-MuiTypography-root">
            some app
          </p>
        </div>
      </div>
    </div>
    <div class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-2 css-15bfe7d-MuiGrid-root">
      <p class="MuiTypography-root MuiTypography-body1 css-9rj0ym-MuiTypography-root">
        02:56 PM
      </p>
    </div>
    <div class="MuiGrid-root MuiGrid-direction-xs-row css-17fpwt7-MuiGrid-root">
      A description
    </div>
  </div>
</li>
`;

exports[`activity/ActivityItem Warning smoke-test 1`] = `
<li class="MuiListItem-root MuiListItem-padding MuiListItem-alignItemsFlexStart css-kd2s28-MuiListItem-root">
  <div class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row css-tqvfrr-MuiGrid-root">
    <div class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-10 css-r13beu-MuiGrid-root">
      <div class="MuiBox-root css-geek62">
        <div class="MuiBox-root css-12z0wuy">
          <svg class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-tye81v-MuiSvgIcon-root"
               focusable="false"
               aria-hidden="true"
               viewbox="0 0 24 24"
               data-testid="WarningAmberOutlinedIcon"
          >
            <path d="M12 5.99 19.53 19H4.47zM12 2 1 21h22zm1 14h-2v2h2zm0-6h-2v4h2z">
            </path>
          </svg>
        </div>
        <div class="MuiBox-root css-0">
          <p class="MuiTypography-root MuiTypography-body1 css-juydac-MuiTypography-root">
            some app
          </p>
        </div>
      </div>
    </div>
    <div class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-2 css-15bfe7d-MuiGrid-root">
      <p class="MuiTypography-root MuiTypography-body1 css-9rj0ym-MuiTypography-root">
        02:56 PM
      </p>
    </div>
    <div class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-spacing-xs-2 css-1314ia1-MuiGrid-root">
      <div class="MuiGrid-root MuiGrid-direction-xs-row css-17fpwt7-MuiGrid-root">
        <p class="MuiTypography-root MuiTypography-body1 css-1jcrwvo-MuiTypography-root">
          GROUP
        </p>
      </div>
      <div class="MuiGrid-root MuiGrid-direction-xs-row css-17fpwt7-MuiGrid-root">
        <a class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-1mxnekj-MuiTypography-root-MuiLink-root"
           href="/apps/XXXX-XXX/groups/YYYY-YYYY"
           data-discover="true"
        >
          some group
        </a>
      </div>
    </div>
    <div class="MuiGrid-root MuiGrid-direction-xs-row css-17fpwt7-MuiGrid-root">
      A description
    </div>
  </div>
</li>
`;
